# kedro-ibis-bigquery

./: README.md  pyproject.toml  requirements.txt  stats.json
conf/base/: catalog.yml  parameters_data_processing.yml
src/kedro_ibis_bigquery/: __init__.py  __main__.py  settings.py
src/kedro_ibis_bigquery/pipelines/data_processing/: __init__.py  nodes.py  pipeline.py
tests/pipelines/data_processing/: test_pipeline.py
