[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "kedro_ibis_bigquery"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
kedro-ibis-bigquery = "kedro_ibis_bigquery.__main__:main"

[tool.kedro]
package_name = "kedro_ibis_bigquery"
project_name = "kedro-ibis-bigquery"
kedro_init_version = "0.19.5"
tools = [ "None",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "kedro_ibis_bigquery.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
